# query-orchestration

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
configs/algorithms/: hybrid-rrf.json  hybrid-weighted.json  hybrid-with-boost.json  keyword-only.json  vector-only.json
docs/: CONFIGURATION.md  GETTING_STARTED.md
orchestrator/: __init__.py
orchestrator/api/: __init__.py  main.py  models.py  routes.py
orchestrator/blocks/: __init__.py  base.py  keyword.py  merge.py  rerank.py  vector.py
orchestrator/config/: __init__.py  schema.py  settings.py
orchestrator/core/: __init__.py  builder.py  client.py  executor.py
scripts/: README.md  create_sample_index.py  test_connection.py
ui/: index.html
